libbitcoinkernel-sys/src/lib.rs


    // --- Context ------------------------------------------------------------

    pub fn btck_context_create(context_options: *const btck_ContextOptions) -> *mut btck_Context;

    pub fn btck_context_copy(context: *const btck_Context) -> *mut btck_Context;

    pub fn btck_context_interrupt(context: *mut btck_Context) -> c_int;

    pub fn btck_context_destroy(context: *mut btck_Context);

    // --- BlockTreeEntry -----------------------------------------------------

    pub fn btck_block_tree_entry_get_previous(
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> *const btck_BlockTreeEntry;

    pub fn btck_block_tree_entry_get_ancestor(
        block_tree_entry: *const btck_BlockTreeEntry,
        height: i32,
    ) -> *const btck_BlockTreeEntry;

    pub fn btck_block_tree_entry_get_block_header(
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> *mut btck_BlockHeader;

    pub fn btck_block_tree_entry_get_height(block_tree_entry: *const btck_BlockTreeEntry) -> i32;

    pub fn btck_block_tree_entry_get_block_hash(
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> *const btck_BlockHash;

    pub fn btck_block_tree_entry_equals(
        entry1: *const btck_BlockTreeEntry,
        entry2: *const btck_BlockTreeEntry,
    ) -> c_int;

    // --- ChainstateManagerOptions -------------------------------------------

    pub fn btck_chainstate_manager_options_create(
        context: *const btck_Context,
        data_directory: *const c_char,
        data_directory_len: usize,
        blocks_directory: *const c_char,
        blocks_directory_len: usize,
    ) -> *mut btck_ChainstateManagerOptions;

    pub fn btck_chainstate_manager_options_set_worker_threads_num(
        chainstate_manager_options: *mut btck_ChainstateManagerOptions,
        worker_threads: c_int,
    );

    pub fn btck_chainstate_manager_options_set_wipe_dbs(
        chainstate_manager_options: *mut btck_ChainstateManagerOptions,
        wipe_block_tree_db: c_int,
        wipe_chainstate_db: c_int,
    ) -> c_int;

    pub fn btck_chainstate_manager_options_update_block_tree_db_in_memory(
        chainstate_manager_options: *mut btck_ChainstateManagerOptions,
        block_tree_db_in_memory: c_int,
    );

    pub fn btck_chainstate_manager_options_update_chainstate_db_in_memory(
        chainstate_manager_options: *mut btck_ChainstateManagerOptions,
        chainstate_db_in_memory: c_int,
    );

    pub fn btck_chainstate_manager_options_destroy(
        chainstate_manager_options: *mut btck_ChainstateManagerOptions,
    );

    // --- ChainstateManager --------------------------------------------------

    pub fn btck_chainstate_manager_create(
        chainstate_manager_options: *const btck_ChainstateManagerOptions,
    ) -> *mut btck_ChainstateManager;

    pub fn btck_chainstate_manager_get_best_entry(
        chainstate_manager: *const btck_ChainstateManager,
    ) -> *const btck_BlockTreeEntry;

    pub fn btck_chainstate_manager_process_block_header(
        chainstate_manager: *mut btck_ChainstateManager,
        header: *const btck_BlockHeader,
        block_validation_state: *mut btck_BlockValidationState,
    ) -> c_int;

    pub fn btck_chainstate_manager_import_blocks(
        chainstate_manager: *mut btck_ChainstateManager,
        block_file_paths_data: *mut *const c_char,
        block_file_paths_lens: *mut usize,
        block_file_paths_data_len: usize,
    ) -> c_int;

    pub fn btck_chainstate_manager_process_block(
        chainstate_manager: *mut btck_ChainstateManager,
        block: *const btck_Block,
        new_block: *mut c_int,
    ) -> c_int;

    pub fn btck_chainstate_manager_get_active_chain(
        chainstate_manager: *const btck_ChainstateManager,
    ) -> *const btck_Chain;

    pub fn btck_chainstate_manager_get_block_tree_entry_by_hash(
        chainstate_manager: *const btck_ChainstateManager,
        block_hash: *const btck_BlockHash,
    ) -> *const btck_BlockTreeEntry;

    pub fn btck_chainstate_manager_destroy(chainstate_manager: *mut btck_ChainstateManager);

    // --- Block --------------------------------------------------------------

    pub fn btck_block_read(
        chainstate_manager: *const btck_ChainstateManager,
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> *mut btck_Block;

    pub fn btck_block_create(raw_block: *const c_void, raw_block_len: usize) -> *mut btck_Block;

    pub fn btck_block_copy(block: *const btck_Block) -> *mut btck_Block;

    pub fn btck_block_check(
        block: *const btck_Block,
        consensus_params: *const btck_ConsensusParams,
        flags: btck_BlockCheckFlags,
        validation_state: *mut btck_BlockValidationState,
    ) -> c_int;

    pub fn btck_block_count_transactions(block: *const btck_Block) -> usize;

    pub fn btck_block_get_transaction_at(
        block: *const btck_Block,
        transaction_index: usize,
    ) -> *const btck_Transaction;

    pub fn btck_block_get_header(block: *const btck_Block) -> *mut btck_BlockHeader;

    pub fn btck_block_get_hash(block: *const btck_Block) -> *mut btck_BlockHash;

    pub fn btck_block_to_bytes(
        block: *const btck_Block,
        writer: btck_WriteBytes,
        user_data: *mut c_void,
    ) -> c_int;

    pub fn btck_block_destroy(block: *mut btck_Block);

    // --- BlockValidationState -----------------------------------------------

    pub fn btck_block_validation_state_create() -> *mut btck_BlockValidationState;

    pub fn btck_block_validation_state_get_validation_mode(
        block_validation_state: *const btck_BlockValidationState,
    ) -> btck_ValidationMode;

    pub fn btck_block_validation_state_get_block_validation_result(
        block_validation_state: *const btck_BlockValidationState,
    ) -> btck_BlockValidationResult;

    pub fn btck_block_validation_state_copy(
        block_validation_state: *const btck_BlockValidationState,
    ) -> *mut btck_BlockValidationState;

    pub fn btck_block_validation_state_destroy(
        block_validation_state: *mut btck_BlockValidationState,
    );

    // --- Chain --------------------------------------------------------------

    pub fn btck_chain_get_height(chain: *const btck_Chain) -> i32;

    pub fn btck_chain_get_by_height(
        chain: *const btck_Chain,
        block_height: i32,
    ) -> *const btck_BlockTreeEntry;

    pub fn btck_chain_contains(
        chain: *const btck_Chain,
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> c_int;

    // --- BlockSpentOutputs --------------------------------------------------

    pub fn btck_block_spent_outputs_read(
        chainstate_manager: *const btck_ChainstateManager,
        block_tree_entry: *const btck_BlockTreeEntry,
    ) -> *mut btck_BlockSpentOutputs;

    pub fn btck_block_spent_outputs_copy(
        block_spent_outputs: *const btck_BlockSpentOutputs,
    ) -> *mut btck_BlockSpentOutputs;

    pub fn btck_block_spent_outputs_count(
        block_spent_outputs: *const btck_BlockSpentOutputs,
    ) -> usize;

    pub fn btck_block_spent_outputs_get_transaction_spent_outputs_at(
        block_spent_outputs: *const btck_BlockSpentOutputs,
        transaction_spent_outputs_index: usize,
    ) -> *const btck_TransactionSpentOutputs;

    pub fn btck_block_spent_outputs_destroy(block_spent_outputs: *mut btck_BlockSpentOutputs);

    // --- TransactionSpentOutputs --------------------------------------------

    pub fn btck_transaction_spent_outputs_copy(
        transaction_spent_outputs: *const btck_TransactionSpentOutputs,
    ) -> *mut btck_TransactionSpentOutputs;

    pub fn btck_transaction_spent_outputs_count(
        transaction_spent_outputs: *const btck_TransactionSpentOutputs,
    ) -> usize;

    pub fn btck_transaction_spent_outputs_get_coin_at(
        transaction_spent_outputs: *const btck_TransactionSpentOutputs,
        coin_index: usize,
    ) -> *const btck_Coin;

    pub fn btck_transaction_spent_outputs_destroy(
        transaction_spent_outputs: *mut btck_TransactionSpentOutputs,
    );

    // --- TransactionInput ---------------------------------------------------

    pub fn btck_transaction_input_copy(
        transaction_input: *const btck_TransactionInput,
    ) -> *mut btck_TransactionInput;

    pub fn btck_transaction_input_get_out_point(
        transaction_input: *const btck_TransactionInput,
    ) -> *const btck_TransactionOutPoint;

    pub fn btck_transaction_input_get_sequence(
        transaction_input: *const btck_TransactionInput,
    ) -> u32;

    pub fn btck_transaction_input_destroy(transaction_input: *mut btck_TransactionInput);

    // --- TransactionOutPoint ------------------------------------------------

    pub fn btck_transaction_out_point_copy(
        transaction_out_point: *const btck_TransactionOutPoint,
    ) -> *mut btck_TransactionOutPoint;

    pub fn btck_transaction_out_point_get_index(
        transaction_out_point: *const btck_TransactionOutPoint,
    ) -> u32;

    pub fn btck_transaction_out_point_get_txid(
        transaction_out_point: *const btck_TransactionOutPoint,
    ) -> *const btck_Txid;

    pub fn btck_transaction_out_point_destroy(transaction_out_point: *mut btck_TransactionOutPoint);

    // --- Txid ---------------------------------------------------------------

    pub fn btck_txid_copy(txid: *const btck_Txid) -> *mut btck_Txid;

    pub fn btck_txid_equals(txid1: *const btck_Txid, txid2: *const btck_Txid) -> c_int;

    pub fn btck_txid_to_bytes(txid: *const btck_Txid, output: *mut c_uchar);

    pub fn btck_txid_destroy(txid: *mut btck_Txid);

    // --- Coin ---------------------------------------------------------------

    pub fn btck_coin_copy(coin: *const btck_Coin) -> *mut btck_Coin;

    pub fn btck_coin_confirmation_height(coin: *const btck_Coin) -> u32;

    pub fn btck_coin_is_coinbase(coin: *const btck_Coin) -> c_int;

    pub fn btck_coin_get_output(coin: *const btck_Coin) -> *const btck_TransactionOutput;

    pub fn btck_coin_destroy(coin: *mut btck_Coin);

    // --- BlockHash ----------------------------------------------------------

    pub fn btck_block_hash_create(block_hash: *const c_uchar) -> *mut btck_BlockHash;

    pub fn btck_block_hash_equals(
        hash1: *const btck_BlockHash,
        hash2: *const btck_BlockHash,
    ) -> c_int;

    pub fn btck_block_hash_copy(block_hash: *const btck_BlockHash) -> *mut btck_BlockHash;

    pub fn btck_block_hash_to_bytes(block_hash: *const btck_BlockHash, output: *mut c_uchar);

    pub fn btck_block_hash_destroy(block_hash: *mut btck_BlockHash);

    // --- BlockHeader --------------------------------------------------------

    pub fn btck_block_header_create(
        raw_block_header: *const c_void,
        raw_block_header_len: usize,
    ) -> *mut btck_BlockHeader;

    pub fn btck_block_header_copy(header: *const btck_BlockHeader) -> *mut btck_BlockHeader;

    pub fn btck_block_header_get_hash(header: *const btck_BlockHeader) -> *mut btck_BlockHash;

    pub fn btck_block_header_get_prev_hash(
        header: *const btck_BlockHeader,
    ) -> *const btck_BlockHash;

    pub fn btck_block_header_get_timestamp(header: *const btck_BlockHeader) -> u32;

    pub fn btck_block_header_get_bits(header: *const btck_BlockHeader) -> u32;

    pub fn btck_block_header_get_version(header: *const btck_BlockHeader) -> i32;

    pub fn btck_block_header_get_nonce(header: *const btck_BlockHeader) -> u32;

    pub fn btck_block_header_to_bytes(
        header: *const btck_BlockHeader,
        output: *mut c_uchar,
    ) -> c_int;

    pub fn btck_block_header_destroy(header: *mut btck_BlockHeader);

} // extern "C"
